loader not showing fixed

--- a/css/ui.css
+++ b/css/ui.css
@@ -1,8 +1,8 @@
 /* spinner style */
 .spinner-eff {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
 }
 .spinner-eff:before, .spinner-eff:after {
   content: "";
